# finance

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.claude/agents/: devops-pipeline-architect.md  financial-architecture-expert.md  financial-docs-writer.md  financial-security-compliance.md  financial-testing-specialist.md  project-manager-agile.md
.github/workflows/: ci.yml  release.yml  update-homebrew-formula.yml
src/finance/: __init__.py  hello.py
src/finance/database/: __init__.py  connection.py  models.py  repositories.py
src/finance/database/migrations/: env.py
src/finance/database/migrations/versions/: 346ba86e9c48_initial_migration_with_core_tables.py
tests/: __init__.py  test_hello.py
tests/database/: conftest.py  test_connection.py  test_models.py  test_repositories.py
